# lmha3

./: .env.example  .gitignore  Cargo.toml  README.md  configuration.nix.lisa  default.nix  dev.sh  flake.nix  lmha3_backup.sql  prop.md  setup_db.sh  shell.nix  topics.txt
.agents/skills/prod-instance-debugging/: SKILL.md
.agents/skills/project-versioning/: SKILL.md
.gemini/skills/project-versioning/: SKILL.md
api/: Cargo.toml
api/src/: main.rs
api/tests/: auth_tests.rs
grafana/dashboards/: overview-h81.json  overview-h83.json
lmha-admin/: Cargo.toml
lmha-admin/src/: main.rs
lmha-core/: Cargo.toml
lmha-core/src/: config.rs  db.rs  ha.rs  lib.rs  scheduler.rs
lmha-core/tests/: db_tests.rs  ha_ssl_test.rs
migrations/: 001_initial_schema.sql  002_add_sessions.sql  003_add_device_heartbeat.sql  004_add_device_consumption.sql  005_add_expected_load.sql  006_add_device_management.sql  007_boiler_advanced_config.sql  008_multi_house_support.sql  009_add_is_admin.sql  010_add_device_sync_fields.sql  011_house_config_extension.sql  012_simple_boiler_runtime.sql  013_grafana_views.sql  014_add_house_deadline.sql
nix/: module.nix
openspec/: project.md
openspec/changes/001-project-setup/: design.md
openspec/changes/002-authentication/: proposal.md  tasks.md
openspec/changes/005-admin-ui/: proposal.md
openspec/changes/007-ha-integration/: tasks.md
openspec/changes/008-logging-improvement/: design.md  proposal.md  tasks.md
openspec/changes/009-device-management-ui/: design.md  proposal.md
openspec/changes/archive/001-2026-05-24-project-setup/: proposal.md  tasks.md
openspec/changes/archive/002-2026-05-24-authentication/: design.md
openspec/changes/archive/003-2026-05-24-ha-integration/: design.md  proposal.md  tasks.md
openspec/changes/device-state-synchronizer/: proposal.md
openspec/changes/simplify-device-overview/: proposal.md  tasks.md
openspec/changes/typescript-migration/: design.md  proposal.md  tasks.md
openspec/specs/admin-device-toggle/: spec.md
openspec/specs/admin-ui/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/data-model/: spec.md
openspec/specs/device-overview/: spec.md
openspec/specs/house-deadline-config/: spec.md
openspec/specs/house-management/: spec.md
openspec/specs/instance-manager/: spec.md
openspec/specs/load-management/: spec.md
openspec/specs/secret-management/: spec.md
openspec/specs/shelly-protocol/: spec.md
openspec/specs/shelly-script-management/: spec.md
openspec/specs/state-synchronizer/: spec.md
openspec/specs/telemetry/: spec.md
openspec/specs/telemetry-visualization/: spec.md
openspec/specs/test-infrastructure/: spec.md
scheduler/: Cargo.toml
scheduler/src/: main.rs
scripts/: clear_instances.py  dump_mqtt.sh  reset_dev_db.sh
secrets/: ha-token.md  mqtt.md
server/: Cargo.toml
server/public/: app.js  index.html  style.css
server/src/: main.rs
server/tests/: auth_tests.rs  device_creation_tests.rs  device_sync_tests.rs  health_check_simulation_tests.rs  health_check_tests.rs  log_tests.rs  mqtt_tests.rs  script_management_tests.rs  telemetry_fetch_tests.rs  telemetry_tests.rs
server/tests/common/: mod.rs
shelly/: script.js
solcast-playground/: main.py  main.py.out
(+81 files in other folders)
