[package]
name = "lmha-core"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
