[package]
name = "lmha-core"
version = "0.0.7"
edition = "2021"

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
ureq = { version = "2.9", features = ["json"] }
