[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
lmha-core = { path = "../lmha-core" }
ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rumqttc = "0.24"
