[package]
name = "server"
version = "0.0.2"
edition = "2021"

[dependencies]
lmha-core = { path = "../lmha-core" }
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4.0", features = ["derive"] }
ureq = "2.9"
rumqttc = "0.24"

[dev-dependencies]
ureq = "2.9"
uuid = { version = "1.0", features = ["v4"] }
postgres = "0.19"
rumqttc = "0.24"
