[package]
name = "server"
version = "0.0.19"
edition = "2021"

[dependencies]
lmha-core = { path = "../lmha-core" }
rouille = "3.6"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4.0", features = ["derive"] }
ureq = { version = "2.9", features = ["json"] }
rumqttc = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
ureq = { version = "2.9", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
postgres = "0.19"
rumqttc = "0.24"
